# bookshelf-api

./: .dockerignore  .env.template  .gitignore  .tagpr  AGENTS.md  CHANGELOG.md  CLAUDE.md  Cargo.toml  Dockerfile  README.md  codecov.yml  docker-compose-test.yml  docker-compose.yml  renovate.json5  schema.graphql
.agent/: PLANS.md
.agent/plans/: 20260429-add-change-history.md  20260501-add-bulk-book-creation.md  20260612-remove-import-books-repository.md  20260613-add-event-set-queries.md  20260705-transaction-owned-user-id.md  20260716-adopt-tagpr-release-flow.md  20260716-unify-mutation-payloads.md  20260722-centralize-entity-timestamps.md
.claude/: settings.json
.devcontainer/: devcontainer.json
.github/: dependabot.yml  release-drafter.yml  release.yml  zizmor.yml
.github/actions/setup-rust-toolchain/: action.yml
.github/scripts/: rust-toolchain-channel.py  test-release-image-metadata.sh  test-validate-release-tag.sh  validate-release-tag.sh
.github/workflows/: actionlint.yml  ci.yml  claude.yml  deploy.yml  e2e.yml  main.yml  publish-image.yml  release-drafter.yml  release.yml  renovate-config-validation.yml  update-rust.yml  zizmor.yml
docs/: database.md
docs/architecture/: event-recording.md
e2e/: Cargo.toml
e2e/src/: lib.rs
e2e/tests/: e2e.rs  graphql_auth.rs  graphql_authors.rs  graphql_books.rs  graphql_event_sets.rs  graphql_history.rs  graphql_import.rs  graphql_restore.rs  health.rs  me.rs
migrations/: 20220306122339_create_tables.sql  20260429040611_add_change_history.sql  20260429050000_add_operation_constraints.sql  20260430102404_add_restore_snapshot.sql  20260515154314_add_author_name_unique.sql  20260515154315_add_import_books_operation.sql
migrations/test/: test_migration.mjs
openspec/changes/archive/2026-06-01-introduce-unit-of-work/: tasks.md
openspec/changes/centralize-entity-timestamps/: design.md  proposal.md  tasks.md
openspec/changes/centralize-entity-timestamps/specs/entity-lifecycle-timestamps/: spec.md
openspec/changes/expose-author-timestamps/: design.md  proposal.md  tasks.md
openspec/changes/expose-author-timestamps/specs/author-timestamps/: spec.md
openspec/changes/fix-import-books-event-set/: design.md  proposal.md  tasks.md
openspec/changes/fix-import-books-event-set/specs/event-set-query/: spec.md
openspec/changes/harden-release-validation/: design.md  proposal.md  tasks.md
openspec/changes/harden-release-validation/specs/release-validation-pipeline/: spec.md
openspec/changes/introduce-unit-of-work/: design.md  proposal.md  tasks.md
openspec/changes/unify-mutation-payloads/: design.md  proposal.md  tasks.md
openspec/changes/unify-mutation-payloads/specs/canonical-mutation-payloads/: spec.md
openspec/changes/use-case-transaction-control/: design.md  proposal.md  tasks.md
openspec/specs/unit-of-work/: spec.md
openspec/specs/use-case-transaction-control/: spec.md
rendercom/: Dockerfile
scripts/: start-opencode-web.sh
src/: auth.rs  common.rs  dependency_injection.rs  domain.rs  extractors.rs  infrastructure.rs  lib.rs  main.rs  presentation.rs  presentational.rs  types.rs  use_case.rs
src/common/: http.rs  time.rs  types.rs
src/domain/: entity.rs  error.rs  repository.rs  service.rs  user.rs
src/domain/entity/: author.rs  book.rs  change_set.rs  common.rs  event.rs  event_set.rs  history.rs  user.rs
src/domain/error/: domain_error.rs
src/domain/repository/: author_event_repository.rs  author_history_repository.rs  author_repository.rs  book_event_repository.rs  book_history_repository.rs  book_repository.rs  event_set_repository.rs  import_books_repository.rs  transaction.rs  user_repository.rs
src/domain/service/: import_books_service.rs
src/extractors/: claims.rs
src/infrastructure/: author_event_repository.rs  author_history_repository.rs  author_repository.rs  book_event_repository.rs  book_history_repository.rs  book_repository.rs  error.rs  event_set_repository.rs  import_books_repository.rs  import_books_service.rs  transaction.rs  unit_of_work.rs  user_repository.rs
src/presentation/: app_state.rs  error.rs  graphql.rs  handler.rs
src/presentation/controller/: graphql_controller.rs
src/presentation/extractor/: claims.rs
src/presentation/graphql/: loader.rs  mutation.rs  object.rs  query.rs  schema.rs
src/presentation/handler/: graphql.rs  user.rs
src/presentational/: controller.rs  error.rs  graphql.rs
src/presentational/controller/: graphql_controller.rs
src/presentational/error/: error.rs
src/presentational/graphql/: loader.rs  mutation.rs  object.rs  query.rs  query_service.rs  schema.rs
src/use_case/: dto.rs  error.rs  interactor.rs  traits.rs  use_case.rs
src/use_case/dto/: author.rs  book.rs  event.rs  event_set.rs  history.rs  mutation.rs  user.rs
src/use_case/interactor/: author.rs  book.rs  event.rs  history.rs  mutation.rs  query.rs  user.rs
src/use_case/traits/: author.rs  book.rs  event.rs  history.rs  mutation.rs  query.rs  user.rs
src/use_case/use_case/: author.rs  book.rs  mutation.rs  query.rs  user.rs
testdata/: test_jwks.json  test_private_key.pem  testdata.sql
tests/: e2e.rs
