[package]
name = "bookshelf-api"
version = "2.0.15"
edition = "2021"
default-run = "bookshelf-api"

[features]
test-with-database = []

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = { version = "1.0.89", features = ["backtrace"] }
async-graphql = { version = "7.0.11", features = ["dataloader"] }
async-graphql-axum = "7.0.11"
async-trait = "0.1.83"
axum = { version = "0.7.7" }
axum-extra = { version = "0.9.4", features = ["typed-header"] }
axum-macros = "0.4.2"
derive_more = { version = "1.0", features = ["display", "error"] }
dotenv = "0.15.0"
envy = "0.4.2"
futures-util = "0.3.31"
getset = "0.1.3"
http = "1.1.0"
jsonwebtoken = "9.3.0"
log = "0.4.22"
mockall = "0.13.0"
once_cell = "1.20.2"
regex = "1.11.0"
reqwest = { version = "0.12", features = ["json", "rustls-tls"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.128"
sqlx = { version = "0.8", features = [
  "runtime-tokio",
  "tls-rustls-aws-lc-rs",
  "postgres",
  "time",
  "uuid",
] }
thiserror = "1.0.64"
time = "0.3.36"
time-macros = "0.2.18"
tokio = { version = "1.40.0", features = ["full"] }
tower = "0.5.1"
tower-http = { version = "0.6.1", features = ["cors", "trace"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
uuid = { version = "1.10.0", features = ["v4"] }
validator = { version = "0.18.1", features = ["derive"] }
