[package]
name = "bookshelf-api"
version = "2.1.3"
edition = "2021"
default-run = "bookshelf-api"

[features]
test-with-database = []

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = { version = "1.0.102", features = ["backtrace"] }
async-graphql = { version = "7.2.1", features = ["dataloader"] }
async-graphql-axum = "7.0.11"
async-trait = "0.1.89"
axum = { version = "0.7.7" }
axum-extra = { version = "0.9.4", features = ["typed-header"] }
axum-macros = "0.5.0"
derive_more = { version = "2.1", features = ["display", "error"] }
dotenv = "0.15.0"
envy = "0.4.2"
futures-util = "0.3.32"
getset = "0.1.6"
http = "1.4.0"
jsonwebtoken = { version = "10.3.0", features = ["aws_lc_rs"] }
log = "0.4.29"
mockall = "0.14.0"
once_cell = "1.21.4"
regex = "1.12.3"
reqwest = { version = "0.12", default-features = false, features = [
  "json",
  "rustls-tls",
] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.149"
sqlx = { version = "0.8", features = [
  "runtime-tokio",
  "tls-rustls-aws-lc-rs",
  "postgres",
  "time",
  "uuid",
] }
thiserror = "2.0.18"
time = "0.3.47"
time-macros = "0.2.18"
tokio = { version = "1.50.0", features = ["full"] }
tower = "0.5.3"
tower-http = { version = "0.6.8", features = ["cors", "trace"] }
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.23", features = ["env-filter"] }
uuid = { version = "1.16.0", features = ["v4"] }
validator = { version = "0.20.0", features = ["derive"] }

[workspace]
members = ["e2e"]
