[package]
name = "bookshelf-api"
version = "2.7.3"
edition = "2024"
default-run = "bookshelf-api"

[features]
test-with-database = []

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = { version = "1.0.89", features = ["backtrace"] }
async-graphql = { version = "7.2.1", features = ["dataloader"] }
async-graphql-axum = "7.2.1"
async-trait = "0.1.83"
axum = { version = "0.8" }
axum-extra = { version = "0.12", features = ["typed-header"] }
axum-macros = "0.5.0"
derive_more = { version = "2.0", features = ["display", "error"] }
dotenvy = "0.15.7"
envy = "0.4.2"
futures-util = "0.3.31"
getset = "0.1.3"
http = "1.1.0"
jsonwebtoken = { version = "10.3.0", features = ["aws_lc_rs"] }
log = "0.4.22"
mockall = "0.15.0"
moka = { version = "0.12", features = ["future"] }
regex = "1.11.0"
reqwest = { version = "0.13", features = [ "json" ] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.128"
sqlx = { version = "0.9", features = [
  "runtime-tokio",
  "tls-rustls-aws-lc-rs",
  "postgres",
  "time",
  "uuid",
  "json",
] }
thiserror = "2.0.0"
time = "0.3.47"
time-macros = "0.2.18"
tokio = { version = "1.43.1", features = ["full"] }
tower = "0.5.1"
tower-http = { version = "0.7.0", features = ["cors", "trace"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.20", features = ["env-filter"] }
uuid = { version = "1.10.0", features = ["v4"] }
validator = { version = "0.20.0", features = ["derive"] }

[workspace]
members = ["e2e"]
