[package]
name = "bookshelf-e2e"
version = "2.2.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
reqwest = { version = "0.13", default-features = false, features = ["json","rustls"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serial_test = "3"
tokio = { version = "1", features = ["rt-multi-thread","macros","process"] }
uuid = { version = "1.0", features = ["v4"] }
